Fixed a bunch of sonar issues on network.server